@@ -72,7 +72,7 @@ class RDPMITM:
         self.statCounter = StatCounter()
         """Class to keep track of connection-related statistics such as # of mouse events, # of output events, etc."""
 
-        self.state = RDPMITMState()
+        self.state = RDPMITMState(config)
         """The MITM state"""
 
         self.client = RDPLayerSet()
